--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
   flutter_staggered_grid_view: ^0.4.0
+  sqflite:
 
 dev_dependencies:
   flutter_test:
